oxker-tui/tests/snapshots/snapshot_tests__filter_panel_all.snap
---
source: oxker-tui/tests/snapshot_tests.rs
expression: output
---
 Esc  clear  ← by →   All  Name  Image  Status  term:
