oxker-tui/tests/snapshots/snapshot_tests__filter_panel_name.snap
---
source: oxker-tui/tests/snapshot_tests.rs
expression: output
---
 Esc  clear  ← by →   Name  Image  Status  All  term: nginx
