oxker-tui/tests/snapshots/snapshot_tests__full_ui_composite.snap
---
source: oxker-tui/tests/snapshot_tests.rs
expression: output
---
 Esc  clear  ← by →   All  Name  Image  Status  term: test                                                              
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                ╭ 0.11.1 ─────────────────────────────────────────────────────────────────────────────╮                 
                │                                                                                     │                 
                │                                       88                                            │                 
                │                                       88                                            │                 
                │                                       88                                            │                 
                │              ,adPPYba,   8b,     ,d8  88   ,d8    ,adPPYba,  8b,dPPYba,             │                 
                │             a8"     "8a   `Y8, ,8P'   88 ,a8"    a8P_____88  88P'   "Y8             │                 
                │             8b       d8     )888(     8888[      8PP"""""""  88                     │                 
                │             "8a,   ,a8"   ,d8" "8b,   88`"Yba,   "8b,   ,aa  88                     │                 
                │              `"YbbdP"'   8P'     `Y8  88   `Y8a   `"Ybbd8"'  88                     │                 
                │                                                                                     │                 
                │                  A simple tui to view & control docker containers                   │                 
                │                                                                                     │                 
                │                               logs timezone: Etc/UTC                                │                 
                │                                                                                     │                 
                  ( tab )  or  ( shift+tab ) change panels                                            │                 
                  ( ↑ ↓ )  or  ( j k )  or  ( PgUp PgDown )  or  ( Home End ) scroll vertically       │                 
                  ( ← → ) horizontal scroll across logs                                               │                 
                  ( ctrl ) increase scroll speed, used in conjuction scroll keys                      │                 
                  ( enter ) send docker container command                                             │                 
                  ( e ) exec into a container                                                         │                 
                  ( f ) force clear the screen & redraw the gui                                       │                 
                  ( h ) toggle this help information - or click heading                               │                 
                  ( s )  or  ( / )  or  ( F1 ) search/filter containers                               │                 
                  ( m ) toggle mouse capture - if disabled, text on screen can be selected & copied   │                 
                  ( 0 ) stop sort                                                                     │                 
                  ( 1 - 9 ) sort by header - or click header                                          │                 
                  ( - = ) change log section height                                                   │                 
                  ( \ ) toggle log section visibility                                                 │                 
                  ( esc ) close dialog                                                                │                 
                  ( q ) quit at any time                                                              │                 
                │                                                                                     │                 
                │         currently an early work in progress, all and any input appreciated          │                 
                │                        https://github.com/mrjackwills/oxker                         │                 
                │                                                                                     │                 
                │                                                                                     │                 
                ╰─────────────────────────────────────────────────────────────────────────────────────╯
